[package]
name = "jolt"
version = "0.1.0"
authors = [
    # author of original Spartan paper and code base 
    "Srinath Setty <srinath@microsoft.com>",
    # authors who contributed to the Arkworks Spartan fork
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
    # authors who contributed to Lasso
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>"
]
edition = "2021"
description = "The lookup singularity. Based on Spartan; built on Arkworks."
documentation = "https://github.com/a16z/lasso/README.md"
repository = "https://github.com/a16z/lasso"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[workspace]
members = [
    "jolt-core",
    "tracer",
    "common",
    "examples/fibonacci",
    "examples/hash"
]

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-std = { git = "https://github.com/arkworks-rs/std/" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
ark-bn254 = { git = "https://github.com/arkworks-rs/curves/" }